Margin fix to make room on mobile

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -118,7 +118,7 @@ fieldset.play-again p {
   }
 
   div.gallows {
-    margin-top: 2rem;
+    margin-top: .5rem;
     width: 110%;
     max-height: 600px;
     max-width: 600px;
